# venvops

./: README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: conftest.py  test_end_to_end.py  test_package.py  test_packages.py  test_venv.py
venvops/: __init__.py
